// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gen-vue > renders the Button SFC 1`] = `
"<!-- AUTOGENERATED by gen-vue. Do not edit. -->
<!-- Source: specs/button.yaml -->
<script setup lang="ts">
/**
 * A trigger that performs an action when activated.
 *
 * @example Solid Primary
 * \`\`\`vue
 * <Button variant="solid" intent="primary">Label</Button>
 * \`\`\`
 *
 * @example Solid Danger Md
 * \`\`\`vue
 * <Button variant="solid" intent="danger" size="md">Label</Button>
 * \`\`\`
 *
 * @example Outline Neutral
 * \`\`\`vue
 * <Button variant="outline" intent="neutral">Label</Button>
 * \`\`\`
 */
import "@teseor/css/components/button.css";
import { computed, type VNode } from "vue";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ButtonVariant = "solid" | "outline" | "ghost" | "link";

type ButtonIntent = "primary" | "neutral" | "success" | "warning" | "danger";

type ButtonSize = "sm" | "md" | "lg";

type ButtonAs = "button" | "a";

type ButtonProps = {
  /** Visual style. */
  variant?: ButtonVariant;
  /** Semantic color. */
  intent?: ButtonIntent;
  /** Size scale. */
  size?: Responsive<ButtonSize>;
  /** Polymorphic root element. Defaults to \`button\`; set to \`a\` for link-shaped triggers (paired with \`variant: link\`). */
  as?: ButtonAs;
  /** Disables interaction and applies the disabled visual state. Mapped to the native \`disabled\` attribute on \`button\`, \`aria-disabled="true"\` otherwise. */
  disabled?: boolean;
  /** Shows a spinner in place of the label and disables interaction. The original label stays in the accessibility tree. */
  loading?: boolean;
  /** Stretches the button to the inline-size of its container. Responsive so layouts can pin block-width on mobile and shrink to content above. */
  block?: Responsive<boolean>;
};

const {
  variant,
  intent,
  size,
  as = "button",
  disabled = false,
  loading = false,
  block = false,
} = defineProps<ButtonProps>();

defineSlots<{
  default?(): VNode[];
  iconStart?(): VNode[];
  iconEnd?(): VNode[];
}>();

const isButton = computed(() => as === "button");
const inactive = computed(() => disabled || loading);

const attrs = computed(() => ({
  "data-variant": variant,
  "data-intent": intent,
  ...responsiveDataAttrs("size", size),
  ...responsiveDataAttrs("block", block),
  "data-loading": loading ? "true" : undefined,
  disabled: isButton.value ? inactive.value : undefined,
  "aria-disabled": !isButton.value && inactive.value ? "true" : undefined,
  "aria-busy": loading ? "true" : undefined,
}));
</script>

<template>
  <component :is="as" class="t-button" v-bind="attrs">
    <span v-if="$slots.iconStart" data-button-icon="" data-position="start">
      <slot name="iconStart" />
    </span>
    <span data-button-label=""><slot /></span>
    <span v-if="$slots.iconEnd" data-button-icon="" data-position="end">
      <slot name="iconEnd" />
    </span>
    <span v-if="loading" data-button-spinner="" aria-hidden="true" />
  </component>
</template>
"
`;

exports[`gen-vue > renders the Cluster SFC with multiple enum-typed props 1`] = `
"<!-- AUTOGENERATED by gen-vue. Do not edit. -->
<!-- Source: specs/cluster.yaml -->
<script setup lang="ts">
/**
 * A horizontal layout primitive. Wraps children on the inline axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`vue
 * <Cluster gap="3">Label</Cluster>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`vue
 * <Cluster gap="0">Label</Cluster>
 * \`\`\`
 *
 * @example Justify Between
 * \`\`\`vue
 * <Cluster gap="3" justify="between">Label</Cluster>
 * \`\`\`
 */
import "@teseor/css/components/cluster.css";
import { computed, type VNode } from "vue";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ClusterAlign = "start" | "center" | "end" | "stretch" | "baseline";

type ClusterJustify = "start" | "center" | "end" | "between" | "around";

type ClusterProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Block-axis alignment of children. */
  align?: Responsive<ClusterAlign>;
  /** Inline-axis distribution of children. */
  justify?: Responsive<ClusterJustify>;
};

const {
  gap,
  align,
  justify,
} = defineProps<ClusterProps>();

defineSlots<{
  default?(): VNode[];
}>();



const attrs = computed(() => ({
  ...responsiveDataAttrs("gap", gap),
  ...responsiveDataAttrs("align", align),
  ...responsiveDataAttrs("justify", justify),
}));
</script>

<template>
  <div class="t-cluster" v-bind="attrs">
    <slot />
  </div>
</template>
"
`;

exports[`gen-vue > renders the Stack SFC with an enum-typed prop 1`] = `
"<!-- AUTOGENERATED by gen-vue. Do not edit. -->
<!-- Source: specs/stack.yaml -->
<script setup lang="ts">
/**
 * A vertical layout primitive. Stacks children on the block axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`vue
 * <Stack gap="3">Label</Stack>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`vue
 * <Stack gap="0">Label</Stack>
 * \`\`\`
 *
 * @example Align Center
 * \`\`\`vue
 * <Stack gap="4" align="center">Label</Stack>
 * \`\`\`
 */
import "@teseor/css/components/stack.css";
import { computed, type VNode } from "vue";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type StackAlign = "start" | "center" | "end" | "stretch";

type StackProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Inline-axis alignment of children. */
  align?: Responsive<StackAlign>;
};

const {
  gap,
  align,
} = defineProps<StackProps>();

defineSlots<{
  default?(): VNode[];
}>();



const attrs = computed(() => ({
  ...responsiveDataAttrs("gap", gap),
  ...responsiveDataAttrs("align", align),
}));
</script>

<template>
  <div class="t-stack" v-bind="attrs">
    <slot />
  </div>
</template>
"
`;

exports[`gen-vue > renders the barrel 1`] = `
"// AUTOGENERATED by gen-vue. Do not edit.

export { default as Button } from "./Button.vue";
"
`;

exports[`gen-vue > renders the runtime helper 1`] = `
"// AUTOGENERATED by gen-vue. Do not edit.

import {
  computed,
  onBeforeUnmount,
  onMounted,
  type Ref,
  ref,
  type ShallowRef,
  shallowRef,
  useId,
  watch,
} from "vue";

const RESPONSIVE_KEYS = ["base", "md", "lg", "xl", "2xl"] as const;

type Breakpoint = (typeof RESPONSIVE_KEYS)[number];

export type Responsive<T> = T | Partial<Record<Breakpoint, T>>;

export function responsiveDataAttrs(
  name: string,
  value: unknown,
): Record<string, string | undefined> {
  if (value == null || value === false) return {};
  if (typeof value === "object") {
    const obj = value as Record<string, unknown>;
    const out: Record<string, string | undefined> = {};
    for (const key of RESPONSIVE_KEYS) {
      const v = obj[key];
      if (v == null || v === false) continue;
      const attr = key === "base" ? \`data-\${name}\` : \`data-\${name}-\${key}\`;
      out[attr] = v === true ? "true" : String(v);
    }
    return out;
  }
  return { [\`data-\${name}\`]: value === true ? "true" : String(value) };
}

// ── Overlay composable — used by composite overlay components ──────────────

type OverlayInteraction = {
  on: { event: string; target?: string; key?: string };
  do: "open" | "close" | "toggle";
  delayMs?: number;
  when?: string;
};

type OverlayConfig = {
  open?: boolean;
  defaultOpen?: boolean;
  onOpenChange?: (open: boolean) => void;
  anchorVar: string;
  popoverMode: "auto" | "manual" | "hint";
  interactions: ReadonlyArray<OverlayInteraction>;
};

type OverlayHandlers = Record<string, (event: Event) => void>;

type OverlayReturn = {
  open: Readonly<Ref<boolean>>;
  setOpen: (next: boolean) => void;
  anchorName: string;
  anchorVar: string;
  popoverId: string;
  popoverMode: "auto" | "manual" | "hint";
  /** Vue's template-ref machinery assigns the DOM element here; consumers
   *  bind via \`ref="contentRef"\` in their template. */
  contentRef: ShallowRef<HTMLElement | null>;
  triggerHandlers: OverlayHandlers;
};

function sanitizeId(id: string): string {
  return id.replace(/[^a-zA-Z0-9_-]/g, "");
}

/**
 * Drives the state machine, popover toggling, anchor binding, and event
 * wiring for composite overlay components in Vue. Mirror of \`useOverlay\` in
 * \`@teseor/react\`; both consume the same spec-derived config.
 */
export function useOverlay(config: OverlayConfig): OverlayReturn {
  const controlled = config.open !== undefined;
  const internalOpen = ref<boolean>(config.defaultOpen ?? false);
  const open = computed<boolean>(() =>
    controlled ? Boolean(config.open) : internalOpen.value,
  );

  const setOpen = (next: boolean) => {
    if (!controlled) internalOpen.value = next;
    config.onOpenChange?.(next);
  };

  const idCore = sanitizeId(useId());
  const anchorName = \`--t-\${idCore}\`;
  const popoverId = \`t-overlay-\${idCore}\`;

  const contentRef = shallowRef<HTMLElement | null>(null);

  let openTimer = 0;
  let closeTimer = 0;
  const clearTimers = () => {
    if (openTimer) window.clearTimeout(openTimer);
    if (closeTimer) window.clearTimeout(closeTimer);
    openTimer = 0;
    closeTimer = 0;
  };

  const schedule = (action: "open" | "close" | "toggle", delayMs: number) => {
    clearTimers();
    const next = action === "toggle" ? !open.value : action === "open";
    if (delayMs <= 0) {
      setOpen(next);
      return;
    }
    if (action === "close") {
      closeTimer = window.setTimeout(() => setOpen(next), delayMs);
    } else {
      openTimer = window.setTimeout(() => setOpen(next), delayMs);
    }
  };

  onBeforeUnmount(() => clearTimers());

  // Sync popover state with the reactive \`open\` value.
  watch(open, (current) => {
    const node = contentRef.value;
    if (!node) return;
    if (current && !node.matches(":popover-open")) {
      try {
        node.showPopover();
      } catch {
        // Popover API unsupported or display:none — degrade silently.
      }
    } else if (!current && node.matches(":popover-open")) {
      try {
        node.hidePopover();
      } catch {
        // Popover API unsupported — degrade silently.
      }
    }
  });

  // Document/window-bound interactions. Listeners attach on mount and unmount.
  const cleanups: Array<() => void> = [];
  onMounted(() => {
    for (const rule of config.interactions) {
      const target = rule.on.target;
      if (target !== "document" && target !== "window") continue;
      const sink: EventTarget = target === "document" ? document : window;
      const handler = (event: Event) => {
        if (rule.when === "open" && !open.value) return;
        if (rule.on.key && event instanceof KeyboardEvent && event.key !== rule.on.key) return;
        schedule(rule.do, rule.delayMs ?? 0);
      };
      sink.addEventListener(rule.on.event, handler);
      cleanups.push(() => sink.removeEventListener(rule.on.event, handler));
    }
  });
  onBeforeUnmount(() => {
    for (const fn of cleanups) fn();
  });

  // Trigger-bound handlers spread via \`v-on\` onto the wrapper element.
  // Keys are bare event names (\`pointerenter\`, not \`onPointerenter\`); Vue's
  // v-on directive handles the listener registration.
  const triggerHandlers: OverlayHandlers = {};
  for (const rule of config.interactions) {
    if (rule.on.target !== "trigger") continue;
    const eventName = rule.on.event;
    const previous = triggerHandlers[eventName];
    const delayMs = rule.delayMs ?? 0;
    triggerHandlers[eventName] = (event: Event) => {
      previous?.(event);
      schedule(rule.do, delayMs);
    };
  }

  return {
    open,
    setOpen,
    anchorName,
    anchorVar: config.anchorVar,
    popoverId,
    popoverMode: config.popoverMode,
    contentRef,
    triggerHandlers,
  };
}
"
`;
